welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:2: error: object aps is not a member of package math
	if (math.aps(a-10<b-10)) {
                 ^close10:5: error: object aps is not a member of package math
	else if (math.aps(b-10<a-10)) {
                      ^