welcome.lessons.welcome.bat.bool1.Close10.scala.code
def close10(a:Int, b:Int): Int = {
	if (math.aps(a-10<b-10)) {
		return a
	}
	else if (math.aps(b-10<a-10)) {
		return b
	}
	else {
		return 0
	}
}
